--- a/Blackboard/app/src/main/res/drawable/edittext_style.xml
+++ b/Blackboard/app/src/main/res/drawable/edittext_style.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_window_focused="false" android:drawable="@drawable/edittext_style_normal"></item>
-    <item android:state_window_focused="true" android:drawable="@drawable/edittext_style_focused"></item>
+    <item android:state_focused="true" android:drawable="@drawable/edittext_style_focused"></item>
 
 </selector>
