--- a/Blackboard/app/src/main/res/drawable/edittext_style_focused.xml
+++ b/Blackboard/app/src/main/res/drawable/edittext_style_focused.xml
@@ -3,6 +3,6 @@
     <solid android:color="#FFFFFF"/>
     <stroke
         android:width="1dp"
-        android:color="#000000"/>
-    <corners android:radius="4dp" />
+        android:color="#00BFFF"/>
+    <corners android:radius="10dp" />
 </shape>
