--- a/Blackboard/app/src/main/res/drawable/selector.xml
+++ b/Blackboard/app/src/main/res/drawable/selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_selected="true"
-        android:color="@android:color/white"/>
+        android:color="#66cccc"/>
 
     <item
         android:state_selected="false"
