--- a/Blackboard/app/src/main/res/layout/activity_board.xml
+++ b/Blackboard/app/src/main/res/layout/activity_board.xml
@@ -7,39 +7,66 @@
     android:layout_height="match_parent"
     tools:context=".BoardActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/board"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/board_search"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/ic_search"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/board_add"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/board_add"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/ic_add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/board"
+                    android:textSize="36sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
+            android:id="@+id/top_navigation"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:weightSum="2"
-            android:id="@+id/top_navigation">
+            android:weightSum="2">
+
                 <Button
                     android:id="@+id/board_message"
-                    android:text="@string/board_message"
-                    android:textSize="20sp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginTop="50dp"
                     android:layout_weight="1"
-                    android:background="@drawable/button"/>
+                    android:background="@drawable/button"
+                    android:text="@string/board_message"
+                    android:textSize="20sp" />
 
                 <Button
                     android:id="@+id/board_organization"
-                    android:text="@string/board_organization"
-                    android:textSize="20sp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginTop="50dp"
                     android:layout_weight="1"
-                    android:background="@drawable/button"/>
+                    android:background="@drawable/button"
+                    android:text="@string/board_organization"
+                    android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -48,15 +75,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:itemBackground="@color/purple_500"
+            app:itemBackground="@color/white"
             app:itemIconTint="@drawable/selector"
             app:itemTextColor="@drawable/selector"
             app:menu="@menu/menu_navigation" />
 
         <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@id/bottom_navigation"/>
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/bottom_navigation" />
 
 </RelativeLayout>
