--- a/Blackboard/app/src/main/res/layout/activity_mine.xml
+++ b/Blackboard/app/src/main/res/layout/activity_mine.xml
@@ -6,22 +6,66 @@
     android:layout_height="match_parent"
     tools:context=".MineActivity">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/mine"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+        android:layout_height="wrap_content">
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/purple_500"
+        app:itemBackground="@color/white"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/menu_navigation"
         android:layout_alignParentBottom="true"/>
+
+    <Button
+        android:id="@+id/my_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="185dp"
+        android:layout_marginEnd="284dp"
+        android:layout_marginBottom="498dp"
+        android:background="@drawable/button"
+        android:text="@string/my_message" />
+
+    <Button
+        android:id="@+id/my_favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="185dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="498dp"
+        android:background="@drawable/button"
+        android:text="@string/my_favorites" />
+
+    <Button
+        android:id="@+id/my_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="283dp"
+        android:layout_marginTop="186dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="498dp"
+        android:background="@drawable/button"
+        android:text="@string/my_post" />
 
 </RelativeLayout>
