--- a/Blackboard/app/src/main/res/layout/activity_mine.xml
+++ b/Blackboard/app/src/main/res/layout/activity_mine.xml
@@ -32,7 +32,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="44dp"
-            android:background="@drawable/button"
+            android:background="@drawable/button_clicked"
             android:text="@string/my_message"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="28dp"
-            android:background="@drawable/button"
+            android:background="@drawable/button_clicked"
             android:text="@string/my_post"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/my_message"
@@ -63,7 +63,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/button"
+            android:background="@drawable/button_clicked"
             android:text="@string/my_favorites"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="392dp"
-            android:background="@drawable/button"
+            android:background="@drawable/button_clicked"
             android:text="@string/my_setting"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
