--- a/Blackboard/app/src/main/res/layout/activity_board.xml
+++ b/Blackboard/app/src/main/res/layout/activity_board.xml
@@ -27,29 +27,29 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/board"
-                                    android:textSize="36sp"
-                                    android:textStyle="bold"
+                                    android:textSize="30sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <Button
-                                    android:id="@+id/board_search"
-                                    android:layout_width="48dp"
-                                    android:layout_height="48dp"
-                                    android:background="@drawable/ic_search"
+                                    android:id="@+id/board_add"
+                                    android:layout_width="28dp"
+                                    android:layout_height="33dp"
+                                    android:background="@drawable/ic_baseline_add_circle_outline_24"
                                     app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toStartOf="@+id/board_add"
+                                    app:layout_constraintEnd_toStartOf="@id/board_search"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <Button
-                                    android:id="@+id/board_add"
-                                    android:layout_width="48dp"
-                                    android:layout_height="48dp"
-                                    android:background="@drawable/ic_add"
+                                    android:id="@+id/board_search"
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:background="@drawable/ic_search"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
+                                    app:layout_constraintTop_toTopOf="parent"  />
+
 
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -64,7 +64,6 @@
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
-                                    android:background="@drawable/button"
                                     android:text="@string/board_message"
                                     android:textSize="20sp" />
 
@@ -73,7 +72,6 @@
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_weight="1"
-                                    android:background="@drawable/button"
                                     android:text="@string/board_organization"
                                     android:textSize="20sp" />
 
