--- a/Blackboard/app/src/main/res/layout/ogn_group_item.xml
+++ b/Blackboard/app/src/main/res/layout/ogn_group_item.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/group_TV"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical"
         android:paddingLeft="20dp"
         android:text="分组"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
 </LinearLayout>
