--- a/Blackboard/app/src/main/res/layout/ogn_list_item.xml
+++ b/Blackboard/app/src/main/res/layout/ogn_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/Child_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
