--- a/Blackboard/app/src/main/res/values/colors.xml
+++ b/Blackboard/app/src/main/res/values/colors.xml
@@ -7,5 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#11222222</color>
+    <color name="gray">#55f8f8f8</color>
+    <color name="more_gray">#a1a1a1</color>
+    <color name="green">#EE437d5c</color>
+    <color name="golden">#EE86833f</color>
+    <color name="yellow">#FFe2d421</color>
+    <color name="transparency">#00000000</color>
 </resources>
