--- a/Blackboard/app/src/main/res/layout/activity_new.xml
+++ b/Blackboard/app/src/main/res/layout/activity_new.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,17 +10,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="上传你的组织头像"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="110dp"/>
+        android:layout_toRightOf="@id/img_portrait"
+        android:layout_alignBottom="@id/img_portrait"
+        android:onClick="ChangeAvatar2"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_portrait"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/qq" />
+        android:src="@drawable/qq"
+        android:onClick="ChangeAvatar2"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,23 +37,25 @@
         android:layout_width="170dp"
         android:layout_height="50dp"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="170dp" />
+        android:layout_marginTop="170dp"
+        android:singleLine="true"/>
 
     <EditText
         android:id="@+id/new_introduction"
         android:layout_width="170dp"
         android:layout_height="50dp"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="220dp" />
+        android:layout_marginTop="220dp"
+        android:singleLine="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="230dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginTop="230dp"
         android:text="组织简介"
         android:textColor="@color/blue"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/new_back"
@@ -63,7 +65,8 @@
         android:layout_marginLeft="70dp"
         android:text="返回"
         android:textColor="@color/blue"
-        android:background="@drawable/button_subscribe"/>
+        android:background="@drawable/button_subscribe"
+        android:onClick="back"/>
 
     <Button
         android:id="@+id/new_organization"
