--- a/Blackboard/app/src/main/res/layout/activity_organization.xml
+++ b/Blackboard/app/src/main/res/layout/activity_organization.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Blackboard.OrganizationList.OrganizationActivity">
+    tools:context=".Bean.OrganizationActivity">
 
     <Button
         android:id="@+id/back_button2"
@@ -14,7 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/ic_settings_back"/>
+        android:background="@drawable/ic_settings_back"
+        android:onClick="back"/>
     <TextView
         android:id="@+id/back2"
         android:layout_width="50dp"
@@ -22,7 +24,8 @@
         app:layout_constraintStart_toEndOf="@id/back_button2"
         app:layout_constraintTop_toTopOf="@id/back_button2"
         android:text="返回"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:onClick="back"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content2"
@@ -75,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@id/TopicRLV"
-        android:text="添加分组"/>
+        android:text="添加分组"
+        android:onClick="addTopic"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
