--- a/Blackboard/app/src/main/res/layout/activity_new.xml
+++ b/Blackboard/app/src/main/res/layout/activity_new.xml
@@ -66,7 +66,7 @@
         android:text="返回"
         android:textColor="@color/blue"
         android:background="@drawable/button_subscribe"
-        android:onClick="back"/>
+        android:onClick="ClickBack"/>
 
     <Button
         android:id="@+id/new_organization"
