--- a/Blackboard/app/src/main/res/layout/activity_organization.xml
+++ b/Blackboard/app/src/main/res/layout/activity_organization.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/ic_settings_back"
-        android:onClick="back"/>
+        android:onClick="ClickBack"/>
     <TextView
         android:id="@+id/back2"
         android:layout_width="50dp"
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="@id/back_button2"
         android:text="返回"
         android:textSize="17sp"
-        android:onClick="back"/>
+        android:onClick="ClickBack"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content2"
@@ -66,18 +66,29 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/TopicRLV"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/content2"
-        android:layout_marginTop="10dp"/>
+        android:orientation="vertical"
+        android:id="@+id/RLV"
+        android:maxHeight="300dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/TopicRLV"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/addTopic"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@id/TopicRLV"
+        app:layout_constraintTop_toBottomOf="@id/RLV"
         android:text="添加分组"
         android:onClick="addTopic"/>
 
