--- a/Blackboard/app/src/main/res/layout/activity_login.xml
+++ b/Blackboard/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,15 @@
         app:layout_constraintTop_toBottomOf="@+id/number"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageButton
+        android:id="@+id/eye"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="@id/password"
+        app:layout_constraintTop_toTopOf="@id/password"
+        android:background="@drawable/ic_baseline_remove_red_eye_24"
+        android:layout_margin="5dp" />
+
     <Button
         android:id="@+id/login_button"
         android:layout_width="140dp"
