--- a/Blackboard/app/src/main/res/layout/activity_mine.xml
+++ b/Blackboard/app/src/main/res/layout/activity_mine.xml
@@ -34,14 +34,15 @@
 
             <TextView
                 android:id="@+id/mine_nickname"
-                android:layout_width="152dp"
+                android:layout_width="wrap_content"
                 android:layout_height="44dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="45dp"
                 android:padding="4dp"
                 android:text=""
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center"/>
 
             <Button
                 android:id="@+id/my_page"
