--- a/Blackboard/app/src/main/res/layout/activity_organization.xml
+++ b/Blackboard/app/src/main/res/layout/activity_organization.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Bean.OrganizationActivity">
+    tools:context=".Bean.Organization.OrganizationActivity">
 
     <Button
         android:id="@+id/back_button2"
@@ -46,10 +46,11 @@
 
         <TextView
             android:id="@+id/name2"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
             app:layout_constraintTop_toTopOf="@id/photo2"
             app:layout_constraintLeft_toRightOf="@id/photo2"
+            android:layout_marginLeft="30dp"
             android:text="MUXI"
             android:textSize="20sp"
             android:gravity="center"/>
@@ -67,29 +68,21 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/TopicRLV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@id/content2"
-        android:orientation="vertical"
-        android:id="@+id/RLV"
-        android:maxHeight="300dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/TopicRLV"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/addTopic"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@id/RLV"
         android:text="添加分组"
-        android:onClick="addTopic"/>
+        android:onClick="addTopic"
+        app:layout_constraintTop_toBottomOf="@id/TopicRLV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
