--- a/Blackboard/app/src/main/res/layout/activity_page.xml
+++ b/Blackboard/app/src/main/res/layout/activity_page.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/activity_background"
-    tools:context=".Mine.PageActivity">
+    tools:context=".Mine.PageActivity"
+    >
 
     <TextView
         android:id="@+id/textView3"
@@ -18,7 +19,6 @@
         android:layout_centerHorizontal="true"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/page_portrait"
         android:layout_width="80dp"
         android:layout_height="80dp"
