--- a/Blackboard/app/src/main/res/layout/activity_login.xml
+++ b/Blackboard/app/src/main/res/layout/activity_login.xml
@@ -17,8 +17,8 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/login_number_label"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -31,8 +31,8 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/login_password_label"
         android:textSize="20sp"
@@ -87,8 +87,8 @@
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="140dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/ic_login"
         android:text="@string/login_button"
         android:textColor="#66ccff"
