--- a/Blackboard/app/src/main/res/layout/activity_mine.xml
+++ b/Blackboard/app/src/main/res/layout/activity_mine.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,116 +7,110 @@
     tools:context=".Mine.MineActivity"
     android:background="@color/gray">
 
-    <RelativeLayout
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/mine_portrait"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="44dp"
+        android:src="@drawable/girl"
+        app:layout_constraintBottom_toTopOf="@+id/my_message"
+        app:layout_constraintEnd_toStartOf="@+id/mine_nickname"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/mine_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="72dp"
+        android:padding="4dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/my_post"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/my_page"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="72dp"
+        android:background="@color/white"
+        android:drawableRight="@drawable/ic_goto"
+        android:text="@string/my_page"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.419"
+        app:layout_constraintStart_toEndOf="@+id/mine_portrait"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/my_message"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
+        android:background="@color/white"
+        android:drawableTop="@drawable/ic_message"
+        android:paddingTop="5dp"
+        android:text="@string/my_message"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/settings"
+        app:layout_constraintEnd_toStartOf="@+id/my_post"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/my_post"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/white"
+        android:drawableTop="@drawable/ic_post"
+        android:paddingTop="5dp"
+        android:text="@string/my_post"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/settings"
+        app:layout_constraintEnd_toStartOf="@+id/my_favorites" />
+
+    <Button
+        android:id="@+id/my_favorites"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/white"
+        android:drawableTop="@drawable/ic_favorites"
+        android:paddingTop="5dp"
+        android:text="@string/my_favorites"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/settings"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/settings"
         android:layout_width="match_parent"
-        android:layout_height="675dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/white"></RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginTop="23dp"
-            android:background="@color/white">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/mine_portrait"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="25dp"
-                android:src="@drawable/girl"
-                />
-
-            <TextView
-                android:id="@+id/mine_nickname"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="45dp"
-                android:padding="4dp"
-                android:text=""
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:gravity="center"/>
-
-            <Button
-                android:id="@+id/my_page"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="290dp"
-                android:layout_marginTop="45dp"
-                android:background="@color/white"
-                android:drawableRight="@drawable/ic_goto"
-                android:text="@string/my_page" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="145dp"
-            android:background="@color/white">
-
-            <Button
-                style="?android:attr/borderlessButtonStyle"
-                android:id="@+id/my_message"
-                android:layout_width="90dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:text="@string/my_message"
-                android:textSize="12sp"
-                android:drawableTop="@drawable/ic_message"
-                android:paddingTop="5dp"/>
-
-            <Button
-                style="?android:attr/borderlessButtonStyle"
-                android:id="@+id/my_post"
-                android:layout_width="90dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="160dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:text="@string/my_post"
-                android:textSize="12sp"
-                android:drawableTop="@drawable/ic_post"
-                android:paddingTop="5dp"/>
-
-            <Button
-                style="?android:attr/borderlessButtonStyle"
-                android:id="@+id/my_favorites"
-                android:layout_width="90dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="280dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:drawableTop="@drawable/ic_favorites"
-                android:text="@string/my_favorites"
-                android:textSize="12sp"
-                android:paddingTop="5dp"/>
-
-        </RelativeLayout>
-
-
-        <Button
-            android:id="@+id/settings"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="247dp"
-            android:background="@color/white"
-            android:drawableLeft="@drawable/ic_settings"
-            android:paddingLeft="10dp"
-            android:text="@string/my_setting"
-            android:textColor="#66ccff" />
-
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="360dp"
+        android:background="@color/white"
+        android:drawableLeft="@drawable/ic_settings"
+        android:paddingLeft="10dp"
+        android:text="@string/my_setting"
+        android:textColor="#66ccff"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -126,7 +120,10 @@
         app:itemBackground="@color/white"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_navigation" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
