--- a/Blackboard/app/src/main/res/layout/activity_new.xml
+++ b/Blackboard/app/src/main/res/layout/activity_new.xml
@@ -1,81 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Blackboard.New.NewActivity">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_portrait"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.26"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.16"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintVertical_bias="0.15"
+
+        android:src="@drawable/qq"
+        />
 
     <TextView
         android:id="@+id/new_portrait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="上传你的组织头像"
-        android:layout_toRightOf="@id/img_portrait"
-        android:layout_alignBottom="@id/img_portrait"
-        android:onClick="ChangeAvatar2"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_portrait"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/qq"
-        android:onClick="ChangeAvatar2"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/img_portrait"
+        app:layout_constraintBottom_toBottomOf="@id/img_portrait"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintVertical_bias="1"
+        />
 
     <TextView
+        android:id="@+id/OgnName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:layout_marginLeft="60dp"
+
+        app:layout_constraintTop_toBottomOf="@id/img_portrait"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/OgnIntro"
+
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintVertical_bias="0.3"
+
         android:text="组织名称"
         android:textColor="@color/blue"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/OgnIntro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+
+        android:text="组织简介"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OgnName"
+
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintVertical_bias="0"
+        />
 
     <EditText
         android:id="@+id/new_name"
         android:layout_width="170dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="170dp"
-        android:singleLine="true"/>
+        android:layout_height="wrap_content"
+
+        app:layout_constraintStart_toEndOf="@id/OgnName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/OgnName"
+
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintVertical_bias="1"
+
+        />
 
     <EditText
         android:id="@+id/new_introduction"
         android:layout_width="170dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="220dp"
-        android:singleLine="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="230dp"
-        android:text="组织简介"
-        android:textColor="@color/blue"
-        android:textSize="20sp" />
+
+        app:layout_constraintStart_toEndOf="@+id/OgnIntro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/OgnIntro"
+
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintVertical_bias="1"
+
+        />
+
 
     <Button
-        android:id="@+id/new_back"
+        android:id="@+id/back1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="70dp"
+
+        android:background="@drawable/button_subscribe"
         android:text="返回"
         android:textColor="@color/blue"
-        android:background="@drawable/button_subscribe"
-        android:onClick="ClickBack"/>
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/create"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OgnIntro"
+
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.15"
+
+        android:onClick="ClickBack"
+
+        />
 
     <Button
-        android:id="@+id/new_organization"
+        android:id="@+id/create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="240dp"
-        android:textColor="@color/blue"
-        android:text="创建"
-        android:background="@drawable/button_subscribe"/>
 
-</RelativeLayout>
+        android:background="@drawable/button_subscribe"
+        android:text="创建"
+        android:textColor="@color/blue"
+
+        app:layout_constraintStart_toEndOf="@id/back1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/back1"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="1"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
