--- a/Blackboard/app/src/main/res/layout/activity_search_result.xml
+++ b/Blackboard/app/src/main/res/layout/activity_search_result.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,44 +8,67 @@
     tools:context=".Blackboard.Search.SearchResultActivity">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/white">
+        android:layout_height="130dp"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/search_result_edittext"
-            android:layout_width="325dp"
-            android:layout_height="35dp"
+            android:layout_width="304dp"
+            android:layout_height="36dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="40dp"
-            android:paddingLeft="10dp"
+            android:layout_marginBottom="24dp"
             android:background="@drawable/edittext_style"
             android:imeOptions="actionSearch"
-            android:singleLine="true"/>
+            android:paddingLeft="10dp"
+            android:singleLine="true" />
 
         <Button
             android:id="@+id/search_result"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="48dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="355dp"
             android:layout_marginTop="35dp"
+            android:layout_marginEnd="19dp"
+            android:layout_marginBottom="21dp"
+            android:layout_toEndOf="@+id/search_result_edittext"
             android:background="@drawable/ic_search" />
 
         <Button
             android:id="@+id/search_result_back"
-            android:layout_width="80dp"
-            android:layout_height="37dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="23dp"
+            android:layout_marginEnd="300dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="10dp"
             android:background="@color/white"
             android:drawableLeft="@drawable/ic_settings_back"
             android:text="返回" />
     </RelativeLayout>
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_search"
         android:layout_width="match_parent"
-        android:layout_height="615dp"
+        android:layout_height="594dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
-        android:id="@+id/fragment_search"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
