--- a/Blackboard/app/src/main/res/layout/item_topic.xml
+++ b/Blackboard/app/src/main/res/layout/item_topic.xml
@@ -6,18 +6,30 @@
         android:id="@+id/topicName"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:hint="#添加话题"
+
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.1"
+
+        android:hint="#添加话题"
         android:textColor="@color/blue"
         android:textSize="25sp"
-        android:gravity="center_vertical"/>
-<!--    <Button-->
-<!--        android:id="@+id/TopicAdd"-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:background="@drawable/ic_baseline_add_circle_outline_24"-->
-<!--        android:layout_marginTop="10dp"/>-->
+        android:gravity="center_vertical"
+        />
+
+    <Button
+        android:id="@+id/TopicAdd"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+
+        app:layout_constraintStart_toEndOf="@id/topicName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.95"
+
+        android:background="@drawable/ic_baseline_add_circle_outline_24"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
