--- a/Blackboard/app/src/main/res/values/themes.xml
+++ b/Blackboard/app/src/main/res/values/themes.xml
@@ -1,3 +1,21 @@
+<!--<resources xmlns:tools="http://schemas.android.com/tools">-->
+<!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
+<!--    <style name="Theme.Blackboard" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--        &lt;!&ndash; Primary brand color. &ndash;&gt;-->
+<!--        <item name="colorPrimary">@color/purple_500</item>-->
+<!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+<!--        <item name="colorOnPrimary">@color/white</item>-->
+<!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
+<!--        <item name="colorSecondary">@color/teal_200</item>-->
+<!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
+<!--        <item name="colorOnSecondary">@color/black</item>-->
+<!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
+<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
+<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+<!--    </style>-->
+
+<!--</resources>-->
+
 <resources xmlns:tools="http://schemas.android.com/tools">
 <!-- Base application theme. -->
 <style name="Theme.Blackboard" parent="Theme.AppCompat.Light.NoActionBar">
@@ -9,16 +27,16 @@
     <item name="colorSecondary">@color/teal_200</item>
     <item name="colorSecondaryVariant">@color/teal_700</item>
     <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
     <!--        设置状态栏全透明-->
     <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
-    <!--    设置界面动画-->
-    <item name="android:windowAnimationStyle">@style/AnimationActivity</item>
-<!--    <item name="android:activityOpenExitAnimation"></item>-->
-</style>
-    <!--    设置退场动画-->
-<style name="AnimationActivity" parent="@android:style/Animation">
-    <item name="android:activityCloseExitAnimation">@android:anim/slide_out_right</item>
-<!--    <item name="android:activityOpenEnterAnimation">@android:anim/slide_in_left</item>-->
+<!--     Customize your theme here.-->
+    <!--        设置状态栏半透明-->
+    <!--        <item name="android:windowTranslucentStatus">false</item>-->
+<!--    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
+    <!-- Customize your theme here. -->
+
+
 </style>
 </resources>
 
