--- a/Blackboard/app/src/main/res/layout/activity_add.xml
+++ b/Blackboard/app/src/main/res/layout/activity_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Blackboard.New.AddActivity">
+    tools:context=".Blackboard.New.PostActivity">
     <Button
         android:id="@+id/back_button"
         android:layout_width="25dp"
