--- a/Blackboard/app/src/main/res/layout/activity_organization.xml
+++ b/Blackboard/app/src/main/res/layout/activity_organization.xml
@@ -55,10 +55,10 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/content1"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHeight_percent="0.2"
         >
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photo2"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -66,7 +66,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
-            android:background="@drawable/qq"/>
+            android:src="@drawable/qq"/>
 
         <TextView
             android:id="@+id/name2"
@@ -96,30 +96,44 @@
         android:id="@+id/content3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/content2"
+
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHeight_percent="0.7"
+
+        app:layout_constraintTop_toBottomOf="@id/content2"
         >
+
+        <Button
+            android:id="@+id/addTopic"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.09"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            android:text="添加分组"
+            android:onClick="addTopic"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/TopicRLV"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
 
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.91"
+
+            app:layout_constraintTop_toBottomOf="@id/addTopic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
             />
 
 
-        <Button
-            android:id="@+id/addTopic"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="添加分组"
-            android:onClick="addTopic"
-            app:layout_constraintTop_toBottomOf="@id/TopicRLV" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
