--- a/Blackboard/app/src/main/res/layout/item_message.xml
+++ b/Blackboard/app/src/main/res/layout/item_message.xml
@@ -22,7 +22,9 @@
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/girl" />
+            android:src="@drawable/girl" />
+
+
 
         <TextView
             android:id="@+id/TV_name"
